// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render Expenses Summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling  
    $2.4
  </h1>
</div>
`;

exports[`Should correctly render Expenses Summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    6
     
    expenses
     totalling  
    $234,323.3
  </h1>
</div>
`;
